--- a/style.css
+++ b/style.css
@@ -161,6 +161,11 @@ html {
     width: 100%;
     object-fit: contain;
     margin-bottom: 15px;
+    transition: all .3s ease-in-out;
+}
+
+.car-img:hover {
+    transform: scale(1.1);
 }
 
 .car-name {
@@ -210,10 +215,18 @@ html {
 /* order */
 
 .order {
-    background-image: url('img/rolls.png');
-    background-position: top 90px right 0;
-    background-repeat: no-repeat;
+    overflow: hidden;
+}
+
+.order-container {
+    position: relative;
     padding-bottom: 121px;
+}
+
+.order-img {
+    position: absolute;
+    bottom: 0;
+    left: 401px;
 }
 
 .order-title {
